# DiscordPlex

./: CMakeLists.txt  CMakePresets.json  DISCORD_FIX.md  LICENSE  README.md  WINDOWS-BUILD-INSTRUCTIONS.md  build-and-upload-windows.bat  build.bat  build.ps1  build.sh  diagnose_artwork.py  generate_changelog.py  org.plexpresence.json  release.bat  release.sh  self-contained-windows-build.bat  simple-windows-build.bat  vcpkg.json  version.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cmake-multi-platform.yml  release.yml
DiscordPlex-master/: .gitignore  WARP.md  build-and-upload-windows.bat  release.bat
DiscordPlex-master/.github/ISSUE_TEMPLATE/: feature_request.md
DiscordPlex-master/_CPack_Packages/win64/NSIS/: project.nsi
DiscordPlex-master/include/: preferences.h  thread_utils.h  version.h.in
DiscordPlex-master/src/: application.cpp
_CPack_Packages/win64/NSIS/: NSIS.InstallOptions.ini  project.nsi
_CPack_Packages/win64/NSIS/PresenceForPlex-0.3.6-win64/: README.md
_CPack_Packages/win64/NSIS/PresenceForPlex-4.2.5-win64/: README.md
_CPack_Packages/win64/NSIS/PresenceForPlex-6.0.10-win64/: README.md
_CPack_Packages/win64/NSIS/PresenceForPlex-6.0.15-win64/: README.md
_CPack_Packages/win64/NSIS/PresenceForPlex-6.0.4-win64/: README.md
_CPack_Packages/win64/NSIS/PresenceForPlex-6.0.6-win64/: README.md
assets/: resources.rc
include/: application.h  config.h  discord.h  discord_ipc.h  http_client.h  logger.h  main.h  models.h  plex.h  preferences.h  resources.h  single_instance.h  trayicon.h  utils.h  uuid.h
release_notes/: changelog_4.3.8.md  changelog_4.3.9.md  changelog_4.4.0.md  changelog_4.4.1.md  changelog_4.4.2.md  changelog_4.4.3.md  changelog_4.4.4.md  changelog_4.4.5.md  changelog_4.4.6.md  changelog_4.4.7.md  changelog_4.4.8.md  changelog_4.4.9.md  changelog_4.5.0.md  changelog_4.5.1.md  changelog_4.5.2.md  changelog_4.5.3.md  changelog_4.5.4.md  changelog_4.5.5.md  changelog_4.5.6.md  changelog_4.5.7.md  changelog_4.5.8.md  changelog_4.5.9.md  changelog_4.6.0.md  changelog_4.6.1.md  changelog_4.6.2.md  changelog_4.6.3.md  changelog_4.6.4.md  changelog_4.6.5.md  changelog_4.6.6.md  changelog_4.6.7.md  changelog_4.6.8.md  changelog_4.6.9.md  changelog_4.7.0.md  changelog_4.7.1.md  changelog_4.7.2.md  changelog_4.7.3.md  changelog_4.7.5.md  changelog_4.7.6.md  changelog_4.7.7.md  changelog_4.7.8.md  (+32 more)
src/: application.cpp  buildArtworkUrl.hpp  config.cpp  discord.cpp  discord.cpp.bak2  discord_ipc.cpp  http_client.cpp  logger.cpp  main.cpp  plex.cpp  plex_temp.cpp  preferences.cpp  single_instance.cpp  trayicon.cpp  utils.cpp  uuid.cpp
